Popup overflow fixed and dropdown active state styling changed

--- a/src/scss/components/_icons_modal.scss
+++ b/src/scss/components/_icons_modal.scss
@@ -1,3 +1,7 @@
 .send-bonus-title {
   margin: 10px auto 5px !important;
 }
+
+.send-bonus-popup {
+  overflow: hidden;
+}
