--- a/src/scss/themes/_blue_theme.scss
+++ b/src/scss/themes/_blue_theme.scss
@@ -183,6 +183,13 @@
     }
   }
 
+  .dropdown-item {
+    &:active {
+      background: #fff !important;
+      color: $label-color;
+    }
+  }
+
   /*Transparent white button*/
   .btn-outline-white {
     border-color: #fff;
